--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
 
 <footer class="text-center">
     {% block footer %}
-        <small> &copy; 2018–<script>document.write(new Date().getFullYear())</script> <a href="https://github.com/greyli">Grey Li</a>
+        <small> &copy; <script>document.write(new Date().getFullYear())</script> <a href="https://github.com/kbrighton">Nick Burtner</a>
         </small>
     {% endblock %}
 </footer>
