--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Bootstrap-Flask Demo Application</h1>
-    <p>This demo uses Bootstrap version 5.</p>
+    <h1>1st Street Graphics Order Intake System</h1>
+    <p>It's MENU for 2023!</p>
 {% endblock %}
