--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,9 +31,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 {{ render_nav_item('main.index', 'Home') }}
+                {% if current_user.is_authenticated %}
                 {{ render_nav_item('main.search_form', 'Search Form') }}
                 {{ render_nav_item('main.search_log', 'Search Log') }}
                 {{ render_nav_item('main.new_order', 'New Order') }}
+                {% endif %}
                 <li class="nav-item"><a class="nav-link" href="https://bootstrap-flask.readthedocs.io/" target="_blank">Documentation</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap Documentation</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://github.com/helloflask/bootstrap-flask" target="_blank">GitHub</a></li>
