Added All Dueouts

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,7 @@
                     {{ render_nav_item('main.search_log', 'Search Log') }}
                     {{ render_nav_item('main.new_order', 'New Order') }}
                     {{ render_nav_item('main.view_dueouts', 'Due Outs') }}
+                    {{ render_nav_item('main.all_dueouts', 'All Due Outs') }}
                     {{ render_nav_item('auth.logout', 'Logout') }}
                 {% endif %}
             </ul>
