--- a/app/templates/main/newresults.html
+++ b/app/templates/main/newresults.html
@@ -32,9 +32,9 @@
         new gridjs.Grid({
             columns:
                 [
-                    { id: 'LOG', name: 'Log#'},
+                    { id:'LOG', name: 'Log#', 'attributes': editableCellAttributes},
                     { id:'ARTLO', name:'Artlog', 'attributes': editableCellAttributes },
-                    { id:'CUST', name:'Customer'},
+                    { id:'CUST', name:'Customer', 'attributes': editableCellAttributes},
                     { id:'TITLE', name:'Title', 'attributes': editableCellAttributes },
                     { id:'PRIOR', name:'Priority', 'attributes': editableCellAttributes },
                     { id:'DATIN', name:'Date In', 'attributes': editableCellAttributes },
