--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-    <div class="container">
+    <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
     </div>
 </nav>
 
-<main class="container">
+<main class="container-fluid">
     {{ render_messages(container=False, dismissible=True, dismiss_animate=True) }}
     {% block content %}{% endblock %}
 </main>
