Fixed bug to allow deletion of duplicates

--- a/app/templates/main/resultstable.html
+++ b/app/templates/main/resultstable.html
@@ -6,7 +6,7 @@
 {% block content %}
     <h2>Search</h2>
 
-    {{ render_table(data, titles, model=Order, primary_key="LOG", table_classes='table-striped', header_classes='thead-dark', caption='Searches', show_actions=True, edit_url=('main.order_edit', [('log_id', ':LOG')])) }}
+    {{ render_table(data, titles, model=Order, primary_key="id", table_classes='table-striped', header_classes='thead-dark', caption='Searches', show_actions=True, edit_url=('main.order_edit', [('log_id', ':LOG')])) }}
 
     {{ render_pagination(pagination) }}
 
